--- a/Xss_1.html
+++ b/Xss_1.html
@@ -74,6 +74,7 @@
                     let msg;
                     msg = "<a href='"+escapeHTML(getvalue("#name"))+"'>Go To Link</a>";
                     document.getElementById("link").innerHTML = msg;
+                    document.getElementById("name").value="";
                 }
             </script>
             </body>
