--- a/Xss_1.html
+++ b/Xss_1.html
@@ -30,6 +30,9 @@
                 <h1 class="text-light">Xss Challenge</h1>
             </div>
             <div class="card-body">
+                <div class="alert alert-primary" role="alert">
+  আপনাকে নিচের বক্সে থাকা html গুলোকে webpage এ প্রিন্ট করে ভিডিও দিতে হবে, বা payload আমাকে পাঠালেও হবে। alert করলে হবেনা।
+</div>
                 <form>
                     <div class="alert alert-success" id="alert" role="alert" style="display:none;">
                         From Submited Successfull! Please Wait For Our Response.
