--- a/Xss_1.html
+++ b/Xss_1.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="form-group">
                         <label for="email">Url:</label>
-                        <input type="name" class="form-control" placeholder="Full Name" id="name">
+                        <input type="name" class="form-control" placeholder="http://google.com" id="name">
                     </div>
                     <div id="link">
 
